<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!-- CardView für ein solides und modernes Design -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        android:background="@color/background_color_secondary"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color_secondary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Name Label -->
            <TextView
                android:id="@+id/nameKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Name -->
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/empty"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Site Label -->
            <TextView
                android:id="@+id/site_name_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:text="@string/site_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Clickable Site Name (Link) -->
            <TextView
                android:id="@+id/site_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="8dp"
                android:text="@string/empty"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <!-- Open Website Button -->
            <Button
                android:id="@+id/button_open_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/open_website"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!-- Copy Link Button -->
            <Button
                android:id="@+id/button_copy_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/copy_link_address"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <!-- Start new Scann Button -->
            <Button
                android:id="@+id/newScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/new_scan"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
